<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.yurmouky.hijjawi.LoginActivity"
    android:weightSum="1">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="303dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.06"
        android:fontFamily="serif"
        android:gravity="center_horizontal"
        android:text="@string/Inform"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="24sp" />


    <ScrollView
        android:id="@+id/login_form1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.18">

        <LinearLayout
            android:id="@+id/email_login_form1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">



            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="72dp">

                <AutoCompleteTextView
                    android:id="@+id/FistName"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/textInputLayout3"
                    android:layout_marginTop="14dp"
                    android:hint="@string/action_Firstname"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="66dp">
                <AutoCompleteTextView
                    android:id="@+id/LastName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/textInputLayout3"
                    android:layout_marginTop="14dp"
                    android:hint="@string/action_Lastname"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <AutoCompleteTextView
                    android:id="@+id/uni_ID"
                    android:layout_width="match_parent"
                    android:layout_height="57dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/textInputLayout3"
                    android:layout_marginTop="14dp"
                    android:hint="@string/action_Uni_ID"
                    android:inputType="number"
                    android:maxLines="1"
                    android:singleLine="true" />
            </android.support.design.widget.TextInputLayout>


            <Spinner
                android:id="@+id/Specializations"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_marginTop="20dp" />


        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/register"
        style="@android:style/Widget.Holo.Button.Small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_weight="0.06"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/action_submit"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="serif" />


</LinearLayout>
