<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.yurmouky.hijjawi.LoginActivity"
    android:background="@color/colorPrimaryDark3"
    >

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <RelativeLayout
        android:id="@+id/username_login_form"
        android:layout_width="400dp"
        android:layout_height="380dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="51dp"
        android:background="@drawable/user_profile_image_background"
        android:orientation="vertical">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="18dp"
            android:textColorHint="@color/cardview_light_background">


            <AutoCompleteTextView
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/textInputLayout3"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="15dp"
                android:layout_weight="1"
                android:hint="@string/prompt_username"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/cardview_light_background"
                android:textColorHighlight="@color/cardview_light_background"
                android:textColorHint="@color/cardview_light_background" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textInputLayout4"
            android:textColorHint="@color/com_facebook_button_background_color_focused">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/cardview_light_background" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="1dp"
            android:text="Need an account ?"
            android:textColor="@color/cardview_light_background"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="12dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="28dp"
            android:layout_marginStart="28dp" />

        <Button
            android:id="@+id/sign_in_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textInputLayout3"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="38dp"
            android:elevation="2dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/action_sign_in"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:textStyle="bold" />

        <com.facebook.login.widget.LoginButton
            android:id="@+id/signin_facebook"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/sign_in_button"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/com_facebook_button_background"
            android:paddingBottom="20dp"
            android:text="@string/action_sign_in_facebook"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/signup"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView2"
            android:layout_alignBottom="@+id/textView2"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_toRightOf="@+id/textView2"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/action_sign_up"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textSize="18sp"
            android:typeface="monospace" />


    </RelativeLayout>


</RelativeLayout>

